--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -144,6 +144,7 @@
 							<select name="WIKI_LANG" class="p-2 rounded bg-gray-800 w-full focus:outline-none border border-gray-700">
 								<option value="id" <%= config.settings.WIKI_LANG === 'id' ? 'selected' : '' %>>Indonesia</option>
 								<option value="en" <%= config.settings.WIKI_LANG === 'en' ? 'selected' : '' %>>English</option>
+								<option value="pt" <%= config.settings.WIKI_LANG === 'pt' ? 'selected' : '' %>>Portugues</option>
 							</select>
 						</div>
 						<div class="flex flex-col gap-1">
