--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -27,6 +27,14 @@
 			<span class="text-xs font-bold text-gray-300">v1.7</span>
         </a>
 		<div class="gap-2 items-center hidden md:flex">
+			<a href="/batch-message" id="massSendBtn" class="relative bg-gray-900 hover:bg-gray-800 text-white p-2 rounded group">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6">
+					<path stroke-linecap="round" stroke-linejoin="round" d="M3 8.25v7.5m0-7.5 9 4.5-9 4.5m13.5-9V6.75a2.25 2.25 0 0 0-2.25-2.25H6.75A2.25 2.25 0 0 0 4.5 6.75v10.5a2.25 2.25 0 0 0 2.25 2.25h7.5a2.25 2.25 0 0 0 2.25-2.25v-.75m2.25-5.25h1.5m-1.5 3h1.5m-4.5-3h1.5m-1.5 3h1.5" />
+				</svg>
+				<span class="absolute -ml-6 left-1/2 transform -translate-x-1/2 translate-y-2 bg-gray-900 text-white text-xs rounded px-2 py-1 opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">
+					Mass Send
+				</span>
+			</a>
 			<a href="/message" class="relative bg-gray-900 hover:bg-gray-800 text-white p-2 rounded group">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6">
 				  <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 0 1-2.555-.337A5.972 5.972 0 0 1 5.41 20.97a5.969 5.969 0 0 1-.474-.065 4.48 4.48 0 0 0 .978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25Z" />
@@ -215,7 +223,7 @@
 		sidebar.classList.add('-translate-x-full');
 	});
 	
-	const ws = new WebSocket(`wss://${window.location.host}`);
+	const ws = new WebSocket('<%= wsProtocol %>://' + window.location.host);
 
 	ws.onmessage = (event) => {
 		const data = JSON.parse(event.data);
